read libraries conf from a directory